# wiki_elm

./: .gitignore
back/: Cargo.toml  requirements.txt  run_debug.sh
back/src/: crud.py  db.py  main.py  main.rs  models.py  models.rs  schemas.py
front/src/: Main.elm
