[package]
name = "back"
version = "0.1.0"
authors = ["Celeo <celeodor@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.10"
log = "0.4"
pretty_env_logger = "0.4.0"
rusqlite = "0.21.0"
serde = { version = "1.0.104", features = ["derive"]}
serde_json = "1.0.45"
tokio = { version = "0.2.11", features = ["macros"]}
warp = "0.2.1"
